--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,17 +2,15 @@
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
         <servlet-name>Test</servlet-name>
-        <servlet-class>me.duchuy.controller.Test</servlet-class>
+        <servlet-class>com.xhobbe.controller.Test</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Test</servlet-name>
         <url-pattern>/Test</url-pattern>
     </servlet-mapping>
-    
     <welcome-file-list>
         <welcome-file>/views/web/home.jsp</welcome-file>
     </welcome-file-list>
-    
     <session-config>
         <session-timeout>
             30
