--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 driverName = com.mysql.cj.jdbc.Driver
-url = jdbc:mysql://localhost:3306/<Enter project DATABASE name>
+url = jdbc:mysql://localhost:3306/xhobbe
 username = root
-password = ""
+password = duchuy2003
