--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,5 @@
 driverName = com.mysql.cj.jdbc.Driver
 url = jdbc:mysql://localhost:3306/xhobbe
 username = root
-password = duchuy2003
+password = 1423
+#duchuy2003
