--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 driverName = com.mysql.cj.jdbc.Driver
 url = jdbc:mysql://localhost:3306/xhobbe
 username = root
-password = 1423
+password = duchuy2003
 #duchuy2003
