--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <httpcore.version>4.4.13</httpcore.version>
         <httpclient.version>4.5.13</httpclient.version>
         <gson.version>2.8.9</gson.version>
+        <jackson-databind.version>2.14.2</jackson-databind.version>
+        
     </properties>
     
     <dependencies>
@@ -58,6 +60,13 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
+        </dependency>
+        
+        <!-- com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
         </dependency>
         
         <!-- org.jboss.weld.servlet/weld-servlet -->
