--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
         <url-pattern>/Test</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
-        <welcome-file>/views/web/home.jsp</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
     <session-config>
         <session-timeout>
