--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,21 @@
         <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
     </listener>
     
+<!--    <error-page>
+        <error-code>404</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/error</location>
+    </error-page>-->
+    
     <session-config>
         <tracking-mode>COOKIE</tracking-mode>
     </session-config>
