open error page

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
         <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
     </listener>
     
-<!--    <error-page>
+    <error-page>
         <error-code>404</error-code>
         <location>/error</location>
     </error-page>
@@ -18,7 +18,7 @@
     <error-page>
         <exception-type>java.lang.Throwable</exception-type>
         <location>/error</location>
-    </error-page>-->
+    </error-page>
     
     <session-config>
         <tracking-mode>COOKIE</tracking-mode>
